# AB-U20-PDG

./: .gitignore  AB-U20-PDG.cpp  AB-U20-PDG.sln  AB-U20-PDG.vcxproj  AB-U20-PDG.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AbsOrdernable.cpp  AbsOrdernable.h  AbsPersona.cpp  AbsPersona.h  AbsSearchable.cpp  AbsSearchable.h  CLI.cpp  CLI.h  CMakeCache.txt  CMakeLists.txt  Cita.cpp  Cita.h  CitaManager.cpp  CitaManager.h  DBProvider.cpp  FakeData.h  FileProvider.cpp  FileProvider.h  Filtro.h  IDataProvider.cpp  IDataProvider.h  IRecord.cpp  IRecord.h  Medico.cpp  Medico.h  MedicoManager.cpp  MedicoManager.h  Paciente.cpp  Paciente.h  PacienteManager.cpp  PacienteManager.h  README.md  ZERO_CHECK.vcxproj  (+3 more)
Gestion/: IDataProvider.cpp
Models/: Paciente.cpp
data/citas/: 123-dsa.json
data/medicos/: dsa.json
data/pacientes/: 0.json  123.json  sda.json  sdsa.json
